--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 
 config.php
 *.bak
+external/connect.php
+external/connect.php
+external/connect.php
+external/connect.php
+external/modules/uploads/connect.php
