External Script Table names
Minor Fix

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ external/connect.php
 external/connect.php
 external/connect.php
 external/modules/uploads/connect.php
+external/modules/uploads/connect.php
+external/connect.php
