--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ external/connect.php
 external/modules/uploads/connect.php
 external/modules/uploads/connect.php
 external/connect.php
+external/connect.php
+external/connect.php
+logs/ceef344b2c821a419f79decfec1a39/170623m6365.txt
+logs/f3cd4b5c9a08f76e4ca38cb9c07a1b/170623m6633.txt
+external/modules/uploads/connect.php
+logs/ceef344b2c821a419f79decfec1a39/160623m6365.txt
